Flytt hull i cv (#43)
* Første manuelle spørring mot indeks

* Legg på content-type + eksempelspørring

* Legger til fulltekst-spørring som gjøres ved hullICV-kall

* Oppdatert kall

* Oppdaterer DockerComposeEnv til å funke med nyere versjon av docker-compose

* La til kommentar om hvor DockerComposeEnv er kopiert fra

Co-authored-by: Are Husby <are.husby@nav.no>